refactor: Replace C implementation with robust C++ version
- Add RAII memory management with AutoDecRef
- Add GilState for thread safety
- Add no-GIL Python detection
- Fix error state handling
- Enable C++11 compilation

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,4 +33,4 @@ frame_disassembler = ["frame_disassembler.pyi", "py.typed"]
 
 [[tool.setuptools.ext-modules]]
 name = "frame_disassembler.frame_disassembler"
-sources = ["frame_disassembler/frame_disassembler.c"]
+sources = ["frame_disassembler/frame_disassembler.cpp"]
